--- a/css/screen_layout_large.css
+++ b/css/screen_layout_large.css
@@ -160,7 +160,7 @@ body {
 .subphoto_rarelead {
   width: 100%;
   height: 517px;
-  background-image: url("../../new site/images/rarelead.jpg");
+  background-image: url("../images/rarelead.jpg");
   background-color: #FFF;
   margin-top: -100px;
   background-size: cover;
