--- a/css/screen_layout_large.css
+++ b/css/screen_layout_large.css
@@ -154,13 +154,13 @@ body {
       -moz-transition: all 0.25s ease;
        -ms-transition: all 0.25s ease;
         -o-transition: all 0.25s ease;
-        transition: all 0.25s ease;
+           transition: all 0.25s ease;
 }
 
 .subphoto_rarelead {
   width: 100%;
   height: 517px;
-  background-image: url("../images/rarelead.jpg");
+  background-image: url(../images/rarelead.jpg);
   background-color: #FFF;
   margin-top: -100px;
   background-size: cover;
