--- a/css/screenstyle.css
+++ b/css/screenstyle.css
@@ -1,60 +1,66 @@
 @charset "UTF-8";
 
-/* Global Content Formatting and Styles */
-
-
 body {
-	color: #333;
-	line-height: 0;
-	font-family: 'Lato', Helvetica, Arial, Verdana, Sans-serif;
-    font-size: 15px;
-    background: #ffffff;
-    margin: 0;
-	padding: 0;
+  color: #333;
+  line-height: 0;
+  font-family: 'Lato', Helvetica, Arial, Verdana, Sans-serif;
+  font-size: 15px;
+  background: #ffffff;
+  margin: 0;
+  padding: 0;
 }
 
-h1 { font-family: Garamond, Times, Serif; color: #CCC; font-weight: bold; font-size: 6em; letter-spacing: -5px;}
-h1 a { color: #FFF;
-  -o-transition:.25s;
-  -ms-transition:.25s;
-  -moz-transition:.25s;
+h1,
+h2,
+h4,
+h6 {
+  font-family: Garamond, Times, Serif;
+}
+
+h1 { color: #CCC; font-weight: bold; font-size: 6em; letter-spacing: -5px;}
+h1 a {
+  color: #FFF;
   -webkit-transition:.25s;
-  transition:.25s;}
+     -moz-transition:.25s;
+      -ms-transition:.25s;
+       -o-transition:.25s;
+          transition:.25s;
+}
 h1 a:hover { text-shadow: 0 0 8px rgba(0, 0, 0, .15);}
-h2 { font-family: Garamond, Times, Serif; color: #333; font-weight: normal; font-style: oblique; font-size: 6.5em; letter-spacing: 0px;}
-h3 { font-family: 'Lato', Helvetica, Arial, Verdana, Sans-serif; color: #CCC; font-weight: normal; font-size: 1em; letter-spacing: 0px;}
-h4 { font-family: Garamond, Times, Serif; color: #333; font-weight: normal; font-style: oblique; font-size: 2em; letter-spacing: 0px;}
-h5 { font-family: 'Lato', Helvetica, Arial, Verdana, Sans-serif; color: #333; font-weight: bold; font-size: 4em; letter-spacing: -2px;}
-h6 { font-family: Garamond, Times, Serif; color: #333; font-weight: normal; text-transform: uppercase; font-size: .85em; letter-spacing: 2px;}
+h2 { color: #333; font-weight: normal; font-style: oblique; font-size: 6.5em; letter-spacing: 0px;}
+h3 { color: #CCC; font-weight: normal; font-size: 1em; letter-spacing: 0px;}
+h4 { color: #333; font-weight: normal; font-style: oblique; font-size: 2em; letter-spacing: 0px;}
+h5 { color: #333; font-weight: bold; font-size: 4em; letter-spacing: -2px;}
+h6 { color: #333; font-weight: normal; text-transform: uppercase; font-size: .85em; letter-spacing: 2px;}
 
-p { margin: 0 0 .75em 0;}
+p {
+  margin: 0 0 .75em;
+}
 a {
-    color: #5e9ec6;
-    text-decoration: none;
-    /*-o-transition:.25s;
-    -ms-transition:.25s;
-    -moz-transition:.25s;
-    -webkit-transition:.25s;
-    transition:.25s;*/}
+  color: #5e9ec6;
+  text-decoration: none;
+}
 
 
-footer {font-size: .85em; color: #ccc;}
+footer {
+  font-size: .85em;
+  color: #ccc;
+}
 
-body ul li
-{
-list-style-type: none;
-padding: 0px;
-margin: 0px;
+body ul li {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 .clearfix:after {
-     visibility: hidden;
-     display: block;
-     font-size: 0;
-     content: " ";
-     clear: both;
-     height: 0;
-     }
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
+}
 .clearfix { display: inline-block; }
 /* start commented backslash hack \*/
 * html .clearfix { height: 1%; }
