--- a/css/screen_layout_large.css
+++ b/css/screen_layout_large.css
@@ -6,15 +6,23 @@ body {
   padding: 0;
 }
 
+.clickable {
+  cursor: pointer;
+}
+
 .header_container {
+  position: relative;
+  z-index: 10;
   width: 100%;
   margin: 0 auto;
   padding: 0;
 }
 .photo_container {
+  position: relative;
+  height: 517px;
+  top: -90px;
   width: 100%;
-  margin: 0 auto;
-  padding: 0;
+  overflow: hidden;
   text-align: center;
 }
 .layout_container {
@@ -158,14 +166,17 @@ body {
 }
 
 .subphoto_rarelead {
-  width: 100%;
-  height: 517px;
-  background-image: url(../images/rarelead.jpg);
-  background-color: #FFF;
-  margin-top: -100px;
+  position: absolute;
+  top: -30px; bottom: -30px; left: -30px; right: -30px;
   background-size: cover;
 }
+.subphoto_rarelead {
+  background-image: url(../images/rarelead.jpg);
+  background-position: 0 0;
+  background-repeat: no-repeat;
+}
 .whitecard {
+  position: relative;
   display: inline-block;
   background-color: #FFF;
   padding: 5px 40px;
@@ -176,4 +187,17 @@ body {
 }
 .subcard h5 {
   margin-top: 25px;
+}
+
+.slideshowing .subphoto_rarelead {
+  -webkit-filter: grayscale(100%) blur(5px);
+     -moz-filter: grayscale(100%) blur(5px);
+          filter: grayscale(100%) blur(5px);
+}
+.slideshowing .subphoto_rarelead:after {
+  content: ' ';
+  display: block;
+  position: absolute;
+  top: 0; right: 0; left: 0; bottom: 0;
+  background-color: rgba(0, 0, 0, .1);
 }
