--- a/css/screen_layout_large.css
+++ b/css/screen_layout_large.css
@@ -10,6 +10,13 @@ body {
   cursor: pointer;
 }
 
+img.responsive {
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .header_container {
   position: relative;
   z-index: 10;
@@ -194,10 +201,50 @@ body {
      -moz-filter: grayscale(100%) blur(5px);
           filter: grayscale(100%) blur(5px);
 }
-.slideshowing .subphoto_rarelead:after {
-  content: ' ';
-  display: block;
-  position: absolute;
-  top: 0; right: 0; left: 0; bottom: 0;
+
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 50;
+  visibility: collapse;
+  overflow: hidden;
+  padding: 30px 80px;
   background-color: rgba(0, 0, 0, .1);
+  opacity: 0;
+  -webkit-transition: opacity 0.25s ease;
+     -moz-transition: opacity 0.25s ease;
+      -ms-transition: opacity 0.25s ease;
+       -o-transition: opacity 0.25s ease;
+          transition: opacity 0.25s ease;
+}
+.slideshowing .modal {
+  visibility: visible;
+  opacity: 1;
+}
+.modal-body {
+  position: relative;
+  z-index: 60;
+  opacity: 0;
+  height: 100%;
+  -webkit-transition: opacity 0.25s ease;
+     -moz-transition: opacity 0.25s ease;
+      -ms-transition: opacity 0.25s ease;
+       -o-transition: opacity 0.25s ease;
+          transition: opacity 0.25s ease;
+}
+.slideshowing .modal-body {
+  opacity: 1;
+}
+.slick-list,
+.slick-slider {
+  height: 100%;
+}
+.slick-slide {
+  background-color: #fff;
+}
+.slick-slide img {
+  margin: 0 auto;
 }
