--- a/css/screen_layout_large.css
+++ b/css/screen_layout_large.css
@@ -6,6 +6,17 @@ body {
   padding: 0;
 }
 
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
 .clickable {
   cursor: pointer;
 }
@@ -188,6 +199,14 @@ img.responsive {
   background-color: #FFF;
   padding: 5px 40px;
   margin: 150px 0;
+  -webkit-transition: all 0.25s ease;
+     -moz-transition: all 0.25s ease;
+      -ms-transition: all 0.25s ease;
+       -o-transition: all 0.25s ease;
+          transition: all 0.25s ease;
+}
+.slideshowing .whitecard {
+  opacity: 0;
 }
 .subcard h6 {
   margin-top: -45px;
@@ -203,15 +222,15 @@ img.responsive {
 }
 
 .modal {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   left: 0;
   bottom: 0;
   z-index: 50;
   visibility: collapse;
+  padding: 30px 0;
   overflow: hidden;
-  padding: 30px 80px;
   background-color: rgba(0, 0, 0, .1);
   opacity: 0;
   -webkit-transition: opacity 0.25s ease;
@@ -229,6 +248,9 @@ img.responsive {
   z-index: 60;
   opacity: 0;
   height: 100%;
+  width: 80%;
+  margin: 0 auto;
+  text-align: left;
   -webkit-transition: opacity 0.25s ease;
      -moz-transition: opacity 0.25s ease;
       -ms-transition: opacity 0.25s ease;
@@ -242,9 +264,67 @@ img.responsive {
 .slick-slider {
   height: 100%;
 }
-.slick-slide {
-  background-color: #fff;
-}
 .slick-slide img {
   margin: 0 auto;
 }
+
+.slide-left {
+  float: left;
+  width: 50%;
+  padding: 80px 30px 30px;
+  color: #fff;
+  line-height: 1.2;
+}
+.slide-left h3 {
+  color: #fff;
+}
+.slide-left hr {
+  margin: 1em 0;
+  border: 1px solid #fff;
+  border-width: 0 0 1px;
+}
+.slideshow img {
+  float: right;
+  max-width: 45%;
+}
+
+.left-arrow,
+.right-arrow {
+  position: absolute;
+  top: 50%;
+  left: -50px;
+  width: 45px;
+  height: 45px;
+  margin-top: -22px;
+  -webkit-transition: all 0.25s ease;
+     -moz-transition: all 0.25s ease;
+      -ms-transition: all 0.25s ease;
+       -o-transition: all 0.25s ease;
+          transition: all 0.25s ease;
+}
+.right-arrow {
+  left: auto;
+  right: -50px;
+}
+.left-arrow { background-image: url(http://eringallup.info/images2/arrow_leftart.png); }
+.left-arrow:hover { background-image: url(http://eringallup.info/images2/arrow_left2art.png); }
+.right-arrow { background-image: url(http://eringallup.info/images2/arrow_rightart.png); }
+.right-arrow:hover { background-image: url(http://eringallup.info/images2/arrow_right2art.png); }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
