--- a/css/screenstyle.css
+++ b/css/screenstyle.css
@@ -3,12 +3,21 @@
 html,
 body {
   color: #333;
-  line-height: 0;
   font-family: 'Lato', Helvetica, Arial, Verdana, Sans-serif;
   font-size: 15px;
   background: #ffffff;
   margin: 0;
   padding: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  line-height: 1.2;
 }
 
 h1,
