--- a/css/screenstyle.css
+++ b/css/screenstyle.css
@@ -30,13 +30,14 @@ h6 {
 h1 { color: #CCC; font-weight: bold; font-size: 6em; letter-spacing: -5px;}
 h1 a {
   color: #FFF;
+  opacity: .6;
   -webkit-transition:.25s;
      -moz-transition:.25s;
       -ms-transition:.25s;
        -o-transition:.25s;
           transition:.25s;
 }
-h1 a:hover { text-shadow: 0 0 8px rgba(0, 0, 0, .15);}
+h1 a:hover { opacity: 1;}
 h2 { color: #333; font-weight: normal; font-style: oblique; font-size: 6.5em; letter-spacing: 0px;}
 h3 { color: #CCC; font-weight: normal; font-size: 1em; letter-spacing: 0px;}
 h4 { color: #333; font-weight: normal; font-style: oblique; font-size: 2em; letter-spacing: 0px;}
