--- a/css/screenstyle.css
+++ b/css/screenstyle.css
@@ -29,7 +29,7 @@ h6 {
 
 h1 { color: #CCC; font-weight: bold; font-size: 6em; letter-spacing: -5px;}
 h1 a {
-  color: #FFF;
+  color: rgba(0, 0, 0, .25);
   opacity: .6;
   -webkit-transition:.25s;
      -moz-transition:.25s;
