--- a/css/screenstyle.css
+++ b/css/screenstyle.css
@@ -28,7 +28,11 @@ h6 {
 }
 
 h1 { color: #CCC; font-weight: bold; font-size: 6em; letter-spacing: -5px;}
-h1 a {
+h1 a,
+h1 a:hover,
+h1 a:focus,
+h1 a:active,
+h1 a:visited {
   color: rgba(0, 0, 0, .25);
   opacity: .6;
   -webkit-transition:.25s;
@@ -37,7 +41,10 @@ h1 a {
        -o-transition:.25s;
           transition:.25s;
 }
-h1 a:hover { opacity: 1;}
+h1 a:hover {
+  opacity: 1;
+  text-decoration: none;
+}
 h2 { color: #333; font-weight: normal; font-style: oblique; font-size: 6.5em; letter-spacing: 0px;}
 h3 { color: #CCC; font-weight: normal; font-size: 1em; letter-spacing: 0px;}
 h4 { color: #333; font-weight: normal; font-style: oblique; font-size: 2em; letter-spacing: 0px;}
