--- a/css/screenstyle.css
+++ b/css/screenstyle.css
@@ -48,7 +48,7 @@ h1 a:hover {
 h2 { color: #333; font-weight: normal; font-style: oblique; font-size: 6.5em; letter-spacing: 0px;}
 h3 { color: #CCC; font-weight: normal; font-size: 1em; letter-spacing: 0px;}
 h4 { color: #333; font-weight: normal; font-style: oblique; font-size: 2em; letter-spacing: 0px;}
-h5 { color: #333; font-weight: bold; font-size: 4em; letter-spacing: -2px;}
+h5 { color: #333; font-weight: bold; font-size: 4em;}
 h6 { color: #333; font-weight: normal; text-transform: uppercase; font-size: .85em; letter-spacing: 2px;}
 
 p {
