--- a/css/screen-layout-large.css
+++ b/css/screen-layout-large.css
@@ -187,13 +187,38 @@ img.responsive {
            transition: all 0.25s ease;
 }
 
-.subphoto-rarelead {
+.subphoto-rarelead, .subphoto-coinledger, .subphoto-currencycheatsheet, .subphoto-quantcast, .subphoto-bnbledger, .subphoto-creativelive{
   position: absolute;
   top: -30px; bottom: -30px; left: -30px; right: -30px;
   background-size: cover;
 }
 .subphoto-rarelead {
   background-image: url(../images/rarelead.jpg);
+  background-position: 0 0;
+  background-repeat: no-repeat;
+}
+.subphoto-coinledger {
+  background-image: url(../images/coinledger.jpg);
+  background-position: 0 0;
+  background-repeat: no-repeat;
+}
+.subphoto-currencycheatsheet {
+  background-image: url(../images/currencycheatsheet.jpg);
+  background-position: 0 0;
+  background-repeat: no-repeat;
+}
+.subphoto-quantcast {
+  background-image: url(../images/currencyquantcast.jpg);
+  background-position: 0 0;
+  background-repeat: no-repeat;
+}
+.subphoto-bnbledger {
+  background-image: url(../images/bnbledger.jpg);
+  background-position: 0 0;
+  background-repeat: no-repeat;
+}
+.subphoto-creativelive {
+  background-image: url(../images/creativelive.jpg);
   background-position: 0 0;
   background-repeat: no-repeat;
 }
@@ -233,7 +258,7 @@ img.responsive {
   opacity: 0;
 }
 
-.slideshowing .subphoto-rarelead {
+.slideshowing .subphoto-rarelead, .slideshowing .subphoto-coinledger, .slideshowing .subphoto-currencycheatsheet, .slideshowing .subphoto-quantcast, .slideshowing .subphoto-bnbledger, .slideshowing .subphoto-creativelive {
   -webkit-filter: grayscale(0%) blur(5px);
      -moz-filter: grayscale(0%) blur(5px);
           filter: grayscale(0%) blur(5px);
@@ -390,6 +415,9 @@ body .slick-slide.slick-active {
 .body-right {
   line-height: 2em;
 }
+.body-right p{
+  margin: 0 0 1.5em 0;
+}
 .body-title {
   padding: 15px 0;
   border: 1px solid #ccc;
@@ -414,6 +442,7 @@ body .slick-slide.slick-active {
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: #f1f1f1;
+  margin-bottom: 60px;
 }
 .project-title,
 .details-title {
@@ -469,6 +498,9 @@ body .slick-slide.slick-active {
 
 .details {
   background-color: transparent;
+  padding: 15px 0;
+  border: 1px solid #ccc;
+  border-width: 1px 0;
 }
 .details-title {
   margin-bottom: 30px;
