--- a/css/screenstyle.css
+++ b/css/screenstyle.css
@@ -33,7 +33,7 @@ h1 a:hover,
 h1 a:focus,
 h1 a:active,
 h1 a:visited {
-  color: rgba(0, 0, 0, .25);
+  color: #999;
   opacity: .6;
   -webkit-transition:.25s;
      -moz-transition:.25s;
@@ -42,7 +42,7 @@ h1 a:visited {
           transition:.25s;
 }
 h1 a:hover {
-  opacity: 1;
+  color: #CCC;
   text-decoration: none;
 }
 h2 { color: #333; font-weight: normal; font-style: oblique; font-size: 6.5em; letter-spacing: 0px;}
