image updates, creative live page edits

--- a/css/screen-layout-large.css
+++ b/css/screen-layout-large.css
@@ -208,7 +208,7 @@ img.responsive {
   background-repeat: no-repeat;
 }
 .subphoto-quantcast {
-  background-image: url(../images/currencyquantcast.jpg);
+  background-image: url(../images/quantcast.jpg);
   background-position: 0 0;
   background-repeat: no-repeat;
 }
