--- a/css/screen-layout-large.css
+++ b/css/screen-layout-large.css
@@ -2,6 +2,10 @@
 
 html,
 body {
+  color: #333;
+  font-family: 'Lato', Helvetica, Arial, Verdana, Sans-serif;
+  font-size: 15px;
+  background: #fff;
   margin: 0;
   padding: 0;
 }
@@ -13,9 +17,64 @@ body {
      -moz-box-sizing: border-box;
           box-sizing: border-box;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  line-height: 1.2;
+  color: #333;
+}
+h1,
+h2,
+h4,
+h6 {
+  font-family: Garamond, Times, Serif;
+}
+h1 {
+  color: #ccc;
+  font-weight: bold;
+  font-size: 6em;
+  letter-spacing: -5px;
+}
+h1 a,
+h1 a:hover,
+h1 a:focus,
+h1 a:active,
+h1 a:visited {
+  color: #999;
+  opacity: .6;
+}
+h1 a:hover {
+  color: #ccc;
+  text-decoration: none;
+}
+h2 { font-weight: normal; font-style: oblique; font-size: 6.5em; letter-spacing: 0px; }
+h3 { color: #ccc; font-weight: normal; font-size: 1em; letter-spacing: 0px;}
+h4 { font-weight: normal; font-style: oblique; font-size: 2em; letter-spacing: 0px;}
+h5 { font-weight: bold; font-size: 4em;}
+h6 { font-weight: normal; text-transform: uppercase; font-size: .85em; letter-spacing: 2px;}
+
+p {
+  margin: 0 0 .75em;
+}
+a {
+  color: #5cb4ea;
+  text-decoration: none;
+}
+a:hover {
+  color: #5e9ec6;
+  text-decoration: none;
+}
 
 
-
+h1 a,
+h1 a:hover,
+h1 a:focus,
+h1 a:active,
+h1 a:visited,
 .headshot img,
 .headshotsub img,
 .headshot:hover p,
